# lumen-studio

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/add-webpage/: SKILL.md
.claude/skills/add-youtube/: SKILL.md
.claude/skills/blog-writing/: SKILL.md
.claude/skills/diagram-conventions/: SKILL.md
.claude/skills/export/: SKILL.md
.claude/skills/image/: SKILL.md
.claude/skills/linkedin-writing/: SKILL.md
.claude/skills/new-project/: SKILL.md
.claude/skills/outline-writing/: SKILL.md
.claude/skills/projects/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/screenshot/: SKILL.md
.claude/skills/slide-conventions/: SKILL.md
.claude/skills/sync/: SKILL.md
.claude/skills/talk-track-writing/: SKILL.md
.claude/skills/video-script/: SKILL.md
docs/: content-studio-automation-design.md
projects/personal/ocia/2025-12-Beatitudes/: project.yaml
projects/personal/ocia/2025-12-Beatitudes/slides/: slide-00-background.html  slide-01-title-v2.html  slide-02-beatitude-meaning.html  slide-03-question-v3.html  slide-04-four-paths-v3.html  slide-04.1-shifted-center.html  slide-05-addiction-v4.html  slide-06-setting-scene.html  slide-07-detachment-action-v6.html  slide-08-life-is-beautiful.html  slide-09a-poor-in-spirit-v2.html  slide-09b-those-who-mourn-v2.html  (+11 more)
tools/: requirements.txt
tools/cstudio/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  gslides.py  images.py  init.py  logging_config.py  projects.py  publish.py  scrape.py  screenshots.py  transcribe.py  utils.py
(+2 files in other folders)
